on mobile the about me button had link border. corrected it

--- a/src/app/header/header.module.css
+++ b/src/app/header/header.module.css
@@ -97,6 +97,7 @@
   text-transform: uppercase;
   border: none;
   border-radius: 2rem;
+  text-decoration: none;
 }
 
 .contactButton:hover {
